--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -5,7 +5,7 @@
   background: var(--inverted-bg-color);
   position: relative;
 
-  transition: all .3s ease;
+  transition: width .3s ease;
 }
 
 .collapsed {
@@ -18,4 +18,8 @@
   bottom: 20px;
   display: flex;
   justify-content: center;
+}
+
+.lang {
+  margin-left: 20px;
 }
