--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,16 +1,14 @@
 :root {
-  --font-family-main: Consolas, "Times New Roman", Serif;
+    --font-family-main: consolas, "Times New Roman", serif;
+    --font-size-n: 16px;
+    --font-line-n: 24px;
+    --font-n: var(--font-size-n) / var(--font-line-n) var(--font-family-main);
+    --font-size-l: 24px;
+    --font-line-l: 32px;
+    --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
 
-  --font-size-n: 16px;
-  --font-line-n: 24px;
-  --font-n: var(--font-size-n) / var(--font-line-n) var(--font-family-main);
-
-  --font-size-l: 24px;
-  --font-line-l: 32px;
-  --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
-
-  // Размеры
-  --navbar-height: 50px;
-  --sidebar-width: 300px;
-  --sidebar-width-collaosed: 80px;
+    // Размеры
+    --navbar-height: 50px;
+    --sidebar-width: 300px;
+    --sidebar-width-collaosed: 80px;
 }
