--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,25 +1,23 @@
 .Sidebar {
-  height: calc(100vh - var(--navbar-height));
-
-  width: var(--sidebar-width);
-  background: var(--inverted-bg-color);
-  position: relative;
-
-  transition: width .3s ease;
+    height: calc(100vh - var(--navbar-height));
+    width: var(--sidebar-width);
+    background: var(--inverted-bg-color);
+    position: relative;
+    transition: width 0.3s ease;
 }
 
 .collapsed {
-  width: var(--sidebar-width-collaosed);
+    width: var(--sidebar-width-collaosed);
 }
 
 .switchers {
-  position: absolute;
-  width: 100%;
-  bottom: 20px;
-  display: flex;
-  justify-content: center;
+    position: absolute;
+    width: 100%;
+    bottom: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .lang {
-  margin-left: 20px;
+    margin-left: 20px;
 }
