add lazy loading, add reducer manager, add dynamic module loader component

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,11 +1,10 @@
 .Button {
     cursor: pointer;
     color: var(--primary-color);
-    padding: 10px 15px;
+    padding: 6px 15px;
 }
 
-.clear,
-.clearInverted {
+.clear {
     padding: 0;
     border: none;
     background: none;
@@ -13,6 +12,10 @@
 }
 
 .clearInverted {
+    padding: 0;
+    border: none;
+    background: none;
+    outline: none;
     color: var(--inverted-primary-color);
 }
 
@@ -41,19 +44,16 @@
 .square.size_m {
     width: var(--font-line-m);
     height: var(--font-line-m);
-    font-size: var(--font-m);
 }
 
 .square.size_l {
     width: var(--font-line-l);
     height: var(--font-line-l);
-    font-size: var(--font-l);
 }
 
 .square.size_xl {
     width: var(--font-line-xl);
     height: var(--font-line-xl);
-    font-size: var(--font-xl);
 }
 
 .size_m {
@@ -66,4 +66,8 @@
 
 .size_xl {
     font: var(--font-xl);
+}
+
+.disabled {
+    opacity: 0.5;
 }
