--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,9 +1,10 @@
 @import "reset";
-@import "./variables/global";
-@import "./themes/normal";
-@import "./themes/dark";
+@import "variables/global";
+@import "themes/normal";
+@import "themes/dark";
 
-body {
+.app,
+.app_modal {
     font: var(--font-m);
     color: var(--primary-color);
 }
