--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -1,66 +1,49 @@
-.Input {
-    position: relative;
+.InputWrapper {
+    display: flex;
 }
 
-input {
-    font-size: 18px;
-    padding: 10px 10px 10px 5px;
-    display: block;
-    width: 100%;
+.placeholder {
+    margin-right: 5px;
+}
+
+.input {
+    background: transparent;
     border: none;
-    background-color: transparent;
-    color: var(--primary-color);
-    border-bottom: 1px solid var(--inverted-bg-color);
-}
-
-input:focus {
     outline: none;
-}
-
-label {
-    color: var(--primary-color);
-    font-size: 18px;
-    font-weight: normal;
-    position: absolute;
-    pointer-events: none;
-    left: 5px;
-    top: 10px;
-    transition: 0.2s ease all;
-}
-
-input:focus ~ label,
-input:valid ~ label {
-    top: -10px;
-    font-size: 14px;
-    color: var(--primary-color);
-}
-
-.bar {
-    position: relative;
-    display: block;
     width: 100%;
+    color: transparent;
+    text-shadow: 0 0 0 var(--primary-color);
+
+    &:focus {
+        outline: none;
+    }
 }
 
-.bar::before,
-.bar::after {
-    content: "";
-    height: 2px;
-    width: 0;
-    bottom: 1px;
-    position: absolute;
+.caretWrapper {
+    flex-grow: 1;
+    position: relative;
+}
+
+.caret {
+    height: 3px;
+    width: 9px;
     background: var(--primary-color);
-    transition: 0.2s ease all;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    animation: blink 0.7s forwards infinite;
 }
 
-.bar::before {
-    left: 50%;
-}
+@keyframes blink {
+    0% {
+        opacity: 0;
+    }
 
-.bar::after {
-    right: 50%;
-}
+    50% {
+        opacity: 0.01;
+    }
 
-input:focus ~ .bar::before,
-input:focus ~ .bar::after {
-    width: 50%;
+    100% {
+        opacity: 1;
+    }
 }
